--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "RecalculateEventMaps"
+name = "OpenbindLigandScoring"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-description = "Tools to generate data suitable for loading into Fragalysis"
+description = "Openbind module for scoring ligand builds with the PanDDA 2 build scoring model"
 dependencies = [
     'pandda-2-gemmi@git+https://github.com/xchem/PanDDA2.git'
 ] 
